syntax = "proto3";
package api;

service AirPlayManagement {
  rpc ToggleBroadcast (BroadcastRequest) returns (ManagementResponse) {}
  rpc ChangeServiceName (NameChangeRequest) returns (ManagementResponse) {}
  rpc ForwardToNodes(AddRemoveNodesRequest) returns (ManagementResponse) {}
  rpc RemoveForwardToNodes(AddRemoveNodesRequest) returns (ManagementResponse) {}
}

message AddRemoveNodesRequest {
repeated string ids = 1;
}

message BroadcastRequest {
  bool shouldBroadcast = 1;
}

message NameChangeRequest {
  string newName = 1;
}

message ManagementResponse {
  int32 returnCode = 1;
  string message = 2;
}